--- a/tcc-mypet-app.csproj
+++ b/tcc-mypet-app.csproj
@@ -64,6 +64,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Services\SpinnerPopup.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\Auth\CreateUserView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
