exibição de pet avançado

--- a/tcc-mypet-app.csproj
+++ b/tcc-mypet-app.csproj
@@ -91,6 +91,9 @@
 	  <MauiXaml Update="Views\App\PetView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\App\PetViewComplete.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\App\ProfileView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
