fix: testado tudo, possiveis tratamento de erros e icones

--- a/tcc-mypet-app.csproj
+++ b/tcc-mypet-app.csproj
@@ -12,7 +12,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 
 		<!-- Display name -->
-		<ApplicationTitle>tcc-mypet-app</ApplicationTitle>
+		<ApplicationTitle>MyPet</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.tcc_mypet_app</ApplicationId>
@@ -35,7 +35,7 @@
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#A2F8C5" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
